syntax = "proto3";

package grpc;

service HelloService {
    rpc SayHello(HelloRequest) returns(HelloResponse);
}

message HelloRequest {
    string message = 2;
}

message HelloResponse {
    string serverID = 2;
    string response = 4;
}